ydcmd (1.3) testing; urgency=low

  * Поддержка TLS > 1.0 для новых версий Python.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 12 Jan 2015 20:23:00 +0300

ydcmd (1.2) testing; urgency=low

  * Исправление ошибки last для одинаковых имен файлов с разными путями;
  * Добавление команды token для упрощенного получения OAuth токена.

 -- Anton Batenev <antonbatenev@yandex.ru>  Wed, 29 Dec 2014 13:06:00 +0300

ydcmd (1.1) testing; urgency=low

  * share / revoke для объектов в хранилище.

 -- Anton Batenev <antonbatenev@yandex.ru>  Wed, 24 Dec 2014 14:26:00 +0300

ydcmd (1.0) testing; urgency=low

  * Документация TR, testing.

 -- Anton Batenev <antonbatenev@yandex.ru>  Thu, 19 Dec 2014 16:04:00 +0300

ydcmd (0.9) unstable; urgency=low

  * Исправление ошибки с кодом возврата для HTTP-xxx.

 -- Anton Batenev <antonbatenev@yandex.ru>  Thu, 09 Dec 2014 22:28:00 +0300

ydcmd (0.8) unstable; urgency=low

  * Исправления для поддержки python 3.x (тестирование на 3.4.2, Arch).

 -- Anton Batenev <antonbatenev@yandex.ru>  Thu, 04 Dec 2014 22:51:00 +0300

ydcmd (0.7) unstable; urgency=low

  * Исправление ошибок статических анализаторов.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 05 Oct 2014 02:18:00 +0400

ydcmd (0.6) unstable; urgency=low

  * Добавление команды last для получения информации о последних загруженных файлах.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 26 Sep 2014 19:42:00 +0400

ydcmd (0.5) unstable; urgency=low

  * Исправления для поддержки python 2.6.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 14 Sep 2014 01:42:00 +0400

ydcmd (0.4) unstable; urgency=low

  * Исправление работы под CentOS.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 13 Sep 2014 18:52:00 +0400

ydcmd (0.3) unstable; urgency=low

  * Исправление ошибок --rsync при работе с не ascii именами файлов.

 -- Anton Batenev <antonbatenev@yandex.ru>  Mon, 01 Sep 2014 23:43:56 +0400

ydcmd (0.2) unstable; urgency=low
