@@ -1,15 +1,20 @@
 [ydcmd]
-token = 1234567890
+# oauth token
+#token = 1234567890
 
+# verbose output
 #verbose = yes
 
-# Debian
-ca-file = /etc/ssl/certs/ca-certificates.crt
-# CentOS
-#ca-file = /etc/ssl/certs/ca-bundle.trust.crt
+# Debian, Ubuntu, Arch
+#ca-file = /etc/ssl/certs/ca-certificates.crt
+# CentOS, Fedora (EV certs)
+#ca-file = /etc/pki/tls/certs/ca-bundle.trust.crt
+# OpenSUSE
+#ca-file = /etc/ssl/ca-bundle.pem
 # FreeBSD
 #ca-file = /usr/local/share/certs/ca-root-nss.crt
 
+# https://www.openssl.org/docs/apps/ciphers.html
 #ciphers = HIGH:!aNULL:!MD5:!3DES:!CAMELLIA:!SRP:!PSK:@STRENGTH
 
 # Be careful with pipes - check pipefail
